Fix compilation and screens, with some remaining issues